tests/cases/match/ok/match-literals.ari
fn score_number(value: i64) -> i64 {
  return match value {
    (1) => 10,
    2 => 20,
    _ => 3,
  };
}

fn score_bool(value: bool) -> i64 {
  return match value {
    (true) => 5,
    false => 7,
  };
}

fn score_range(value: i64) -> i64 {
  return match value {
    -3..0 => 2,
    1..=3 => 5,
    4..6 => 7,
    _ => 11,
  };
}

fn score_byte(value: u8) -> i64 {
  return match value {
    0..=127 => 13,
    128..=255 => 17,
  };
}

fn score_byte_stmt(value: u8) -> i64 {
  var total = 0;
  match value {
    0..10 => {
      total = 2;
    },
    10..=255 => {
      total = 4;
    },
  }
  return total;
}

fn score_or(value: i64) -> i64 {
  return match value {
    1 | 2 => 3,
    3..=4 | 6 => 5,
    _ => 7,
  };
}

fn score_bool_or(value: bool) -> i64 {
  return match value {
    true | false => 19,
  };
}

fn main() -> i64 {
  var total = 0;
  match 5 {
    (1) => {
      total = 99;
    },
    2..=4 => {
      total = total + 4;
    },
    5..6 => {
      total = total + 8;
    },
    _ => {
      total = 1;
    },
  }
  return total + score_number(1) + score_number(9) + score_bool(true) + score_bool(false) + score_range(-2) + score_range(3) + score_range(5) + score_range(6) + score_byte(3u8) + score_byte(200u8) + score_byte_stmt(9u8) + score_byte_stmt(10u8) + score_or(1) + score_or(4) + score_or(9) + score_bool_or(false);
}
