tests/cases/match/errors/match-enum-payload-duplicate-literal.ari
enum OptionI32 {
  None,
  Some(i32),
}

fn main() -> i64 {
  return match Some(1) {
    Some(1) => 10,
    Some(1) => 20,
    Some(_) => 1,
    None => 0,
  };
}
